--- a/CoursFlairy/CoursFlairy.csproj
+++ b/CoursFlairy/CoursFlairy.csproj
@@ -25,11 +25,23 @@
     <None Remove="Data\Images\baby 1.png" />
     <None Remove="Data\Images\child 1.png" />
     <None Remove="Data\Images\pensioner 1.png" />
+    <None Remove="Themes\Fonts\0_BlackerSansProVariableGX.ttf" />
+    <None Remove="Themes\Fonts\BleekerCyrillic.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Themes\Fonts\0_BlackerSansProVariableGX.ttf">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Themes\Fonts\BleekerCyrillic.ttf">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+    <PackageReference Include="SharpVectors.Wpf" Version="1.8.4.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -48,7 +60,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Images\" />
+    <Folder Include="Data\Images\CompanyIcons\" />
   </ItemGroup>
 
 </Project>
